--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
-  "name": "passport-prereg-demo-frontend",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.4.3",
-    "typescript": "^5.0.0",
-    "vite": "^4.3.6"
-  },
-  "type": "module",
-  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
-  "main": "svelte.config.js",
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@imtbl/sdk": "^0.1.9",
-    "@mailchimp/mailchimp_marketing": "^3.0.80",
-    "@sveltejs/adapter-vercel": "^3.0.2",
-    "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
-    "fs": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.1",
-    "jwk-to-pem": "^2.0.5",
-    "vite-plugin-node-polyfills": "^0.9.0"
-  }
+	"name": "passport-prereg-demo-frontend",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.2",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.6"
+	},
+	"type": "module",
+	"description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
+	"main": "svelte.config.js",
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@imtbl/sdk": "^0.1.9",
+		"@mailchimp/mailchimp_marketing": "^3.0.80",
+		"@popperjs/core": "^2.11.8",
+		"@sveltejs/adapter-vercel": "^3.0.2",
+		"axios": "^1.4.0",
+		"dotenv": "^16.3.1",
+		"flowbite": "^1.7.0",
+		"flowbite-svelte": "^0.39.2",
+		"fs": "^0.0.1-security",
+		"jsonwebtoken": "^9.0.1",
+		"jwk-to-pem": "^2.0.5",
+		"tailwind-merge": "^1.13.2",
+		"vite-plugin-node-polyfills": "^0.9.0"
+	}
 }
